fixed groupcard position and added scrollbar to studygroup list in sidebar

--- a/frontend/src/components/homeFeed/GroupCard.css
+++ b/frontend/src/components/homeFeed/GroupCard.css
@@ -7,15 +7,7 @@
   flex-wrap: wrap;
 }
 
-.MuiTypography-h6 {
-  color: var(--main-dark-color);
-  font-weight: 500;
-}
-
-.MuiTypography-body2 {
-  color: var(--main-dark-color);
-}
-
 .MuiCardContent-root {
   padding: 20px;
 }
+
