--- a/frontend/src/components/sidebar/Sidebar.css
+++ b/frontend/src/components/sidebar/Sidebar.css
@@ -105,7 +105,21 @@
   width: 120%;
   color: var(--main-dark-color);
   max-height: 125px;
-  overflow-y: auto;
+  overflow-y: scroll;
+  direction: rtl;
+}
+
+.group-list::-webkit-scrollbar {
+  width: 6px; 
+}
+
+.group-list::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+
+.group-list::-webkit-scrollbar-thumb {
+  background: var(--main-dark-color); 
+  border-radius: 6px; 
 }
 
 .group-list a {
@@ -113,9 +127,9 @@
   text-decoration: none;
   color: var(--main-color);
   font-weight: 700;
-  padding: 10px 10px 10px 10px;
+  padding: 10px 2px 10px 10px;
   transition: background-color 0.2s ease;
-  margin-left: 25px;
+  text-align: left;
 }
 
 .group-list a:hover {
